--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -57,10 +57,10 @@ div.plan:hover
     border-radius: 6px;
 }
 
-form {
-    border: 3px solid #f1f1f1;
+.background{
+	padding:15px;
+	background: url("../images/background.gif");
 }
-
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -121,5 +121,26 @@ span.psw {
 	color:red;
 }
  input.ng-valid {
+	border: solid 1px #90EE90;
+}
+input.ng-invalid {
+	border: solid 1px #FF0000;
+}
+
+input ,select{
+	background-color: #FAFFBD;
+}
+
+.jumbotron{
+	background: -webkit-linear-gradient(#d9cba5, #b4964b); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#d9cba5, #b4964b); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#d9cba5, #b4964b); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#d9cba5, #b4964b);
+	box-shadow: 0 2px 10px rgba(0,0,0,0.8);
+	
+}
+
+
+successText {
 	background-color: lightgreen;
 }
