Create Binary Tree
Change-Id: I9783396dd752091fbc5850d246c99f4b7f64d5fd

--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -141,6 +141,18 @@ input ,select{
 }
 
 
-successText {
+.successText {
 	background-color: lightgreen;
+}
+
+#orgChart{
+    width: auto;
+    height: auto;
+}
+
+#orgChartContainer{
+    width: 1000px;
+    height: 500px;
+    overflow: auto;
+    background: #eeeeee;
 }
