--- a/src/main/webapp/static/css/jquery.orgchart.css
+++ b/src/main/webapp/static/css/jquery.orgchart.css
@@ -55,19 +55,21 @@ div.orgChart div.node {
   padding : 5px;
   width : 96px;
   height : 60px;
-  background: #ffffff; /* Old browsers */
-  background: -moz-linear-gradient(top, #ffffff 0%, #fbfbfb 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #fbfbfb)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #ffffff 0%, #fbfbfb 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #ffffff 0%, #fbfbfb 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #ffffff 0%, #fbfbfb 100%); /* IE10+ */
-  background: linear-gradient(to bottom, #ffffff 0%, #fbfbfb 100%); /* W3C */
-  line-height : 1.3em;
+  
+   line-height : 1.3em;
   border-radius : 4px;
   -moz-border-radius : 4px;
   -webkit-border-radius : 4px;
   position: relative;
   box-shadow: 1px 1px 0px #ddd;
+  /* background: #ffffff; Old browsers
+  background: -moz-linear-gradient(top, #ffffff 0%, #fbfbfb 100%); FF3.6+
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #fbfbfb)); Chrome,Safari4+
+  background: -webkit-linear-gradient(top, #ffffff 0%, #fbfbfb 100%); Chrome10+,Safari5.1+
+  background: -o-linear-gradient(top, #ffffff 0%, #fbfbfb 100%); Opera 11.10+
+  background: -ms-linear-gradient(top, #ffffff 0%, #fbfbfb 100%); IE10+
+  background: linear-gradient(to bottom, #ffffff 0%, #fbfbfb 100%); */ /* W3C */
+ 
 }
 
 .org-add-button,
