--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -55,6 +55,7 @@ div.plan:hover
 .round
 {
     border-radius: 6px;
+        color: white;
 }
 
 .background{
@@ -73,6 +74,7 @@ input[type=text], input[type=password] {
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
+   
 }
 
 button {
@@ -134,6 +136,11 @@ input.ng-invalid {
 
 input ,select{
 	background-color: #6B4E31;
+	
+}
+
+input[type="checkbox"]{
+	color:white;
 }
 
 /* .jumbotron{
@@ -144,13 +151,16 @@ input ,select{
 	box-shadow: 0 2px 10px rgba(0,0,0,0.8);
 	
 } */
-
+div.node{
+	background-color: transparent !important;
+}
 .jumbotron{
 	background: -webkit-linear-gradient(#d9cba5, #b4964b); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(#d9cba5, #b4964b); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(#d9cba5, #b4964b); /* For Firefox 3.6 to 15 */
 	background: linear-gradient(#7b6d79, #906945);
 	box-shadow: 0 2px 10px rgba(0,0,0,0.8);
+	color:white;
 	
 }
 .round ng-dirty ng-valid-parse ng-touched ng-valid ng-valid-required
@@ -167,7 +177,79 @@ input ,select{
 }
 
 
+/* Change autocomplete styles in WebKit */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus
+input:-webkit-autofill, 
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid green;
+  -webkit-text-fill-color: #FFFFFF;
+  -webkit-box-shadow: 0 0 0px 1000px #6B4E31 inset;
+  
+}
 
+::-webkit-input-placeholder {
+   color:#FFFFFF ;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: #FFFFFF;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: #FFFFFF;  
+}
+
+:-ms-input-placeholder {  
+   color: #FFFFFF;  
+}
+
+
+label{
+	color: #FFFFFF;
+	}
+
+pre {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    /* color: #333; */
+    word-break: break-all;
+    word-wrap: break-word;
+     background-color: transparent !important;
+     color:#FFFFFF !important ;
+    border: 0px solid #ccc !important; 
+    border-radius: 0px !important; 
+}
+
+.left-nav {
+    background-color: rgba(0, 0, 0, 0.20);
+    color: #FFF;
+    display: table-cell;
+    float: none!important;
+    width: 250px;
+    vertical-align: top;
+}
+
+#side-nav ul#nav {
+    list-style: none outside none;
+    margin: 0;
+    padding: 0;
+}
+#side-nav * {
+    overflow-x: hidden;
+    overflow-y: visible;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
 #orgChartContainer{
     width: 1000px;
