--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -1,4 +1,4 @@
-h3
+/* h3
 {
     background-color: black;
     text-align: center;
@@ -7,12 +7,15 @@ h3
     margin-bottom: .2em;
     width: 100%;
     display: table;
-}
+} */
 span.plantableheader
 {
     display: table-cell;
     vertical-align: middle;
 }
+a {
+    color: #FFFFFf !important
+    }
 .Pricetag
 {
     background-color: #0041ad;
@@ -60,12 +63,15 @@ div.plan:hover
 
 .background{
 	padding:15px;
-	/* background: url("../images/background.gif"); */
-	background: #382c42;/*where gradient does not works*/
-	background: -webkit-linear-gradient(90deg, #382c42, #af7f5a); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(90deg, #382c42, #af7f5a); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(90deg, #382c42, #af7f5a); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(90deg,#382c42 , #af7f5a); /* Standard syntax (must be last)*/
+	 background: url("../images/h.jpg"); 
+	 
+	 background-color: #54364a;
+    background-size: cover;
+	/* background: #382c42;where gradient does not works
+	background: -webkit-linear-gradient(90deg, #382c42, #af7f5a); For Safari 5.1 to 6.0
+    background: -o-linear-gradient(90deg, #382c42, #af7f5a); For Opera 11.1 to 12.0
+    background: -moz-linear-gradient(90deg, #382c42, #af7f5a); For Firefox 3.6 to 15
+    background: linear-gradient(90deg,#382c42 , #af7f5a); */ /* Standard syntax (must be last)*/
 }
 input[type=text], input[type=password] {
     width: 100%;
@@ -238,6 +244,18 @@ pre {
     width: 250px;
     vertical-align: top;
 }
+.btnLogout {
+	background-color: transparent;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #FFFFFF;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
 
 #side-nav ul#nav {
     list-style: none outside none;
@@ -257,3 +275,307 @@ pre {
     overflow: auto;
     background: #eeeeee;
 }
+
+ul.navbar-nav li a:hover { 
+    background-color: #7D5132;
+}
+
+
+div.orgChart td {
+   
+    padding: 0px 13px !important; 
+    padding-top: 0px !important;
+    padding-right: 13px !important;
+    padding-bottom: 0px !important;
+    padding-left: 13px !important;
+}
+
+.widget{
+	position: relative;
+    clear: both;
+    padding-bottom: 30px;
+    width: auto;
+    overflow: hidden;
+}
+
+.widget-header {
+	position: relative;
+	height: 60px;
+	line-height: 40px;
+	background-color: rgba(0, 0, 0, 0.40);
+	border: 1px solid rgba(255,255,255, 0.3);
+}
+
+.widget-header h3 {
+	position: relative;
+	top: 2px;
+	left: 10px;
+	display: inline-block;
+	margin-right: 3em;
+	font-size: 18px;
+	font-weight: 300;
+	color: #fff;
+	line-height: 18px;
+}
+
+.widget-header [class^="icon-"], .widget-header [class*=" icon-"] {
+	display: inline-block;
+	margin-left: 13px;
+	margin-right: -2px;
+	font-size: 16px;
+	color: #fff;
+	vertical-align: middle;
+}
+
+.widget-content {
+	padding: 20px 15px 15px;
+	background-color: rgba(0, 0, 0, 0.25);
+	border: 1px solid rgba(255,255,255, 0.3);
+}
+
+.widget-header+.widget-content {
+	border-top: none;
+	-webkit-border-top-left-radius: 0;
+	-webkit-border-top-right-radius: 0;
+	-moz-border-radius-topleft: 0;
+	-moz-border-radius-topright: 0;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
+.widget-nopad .widget-content {
+	padding: 0;
+}
+
+.widget-content:before, .widget-content:after {
+	content: "";
+	display: table;
+}
+
+.widget-content:after {
+	clear: both;
+}
+
+.widget-content {
+	zoom: 1;
+}
+
+
+.widget-table .widget-content {
+	padding: 0;
+}
+
+.widget-table .table {
+	margin-bottom: 0;
+	border: none;
+}
+
+.widget-table .table tr td:first-child {
+	border-left: none;
+}
+
+.widget-table .table tr th:first-child {
+	border-left: none;
+}
+
+.widget-plain {
+	background: transparent;
+	border: none;
+}
+
+.widget-plain .widget-content {
+	padding: 0;
+	background: transparent;
+	border: none;
+}
+.widget-box {
+}
+
+.widget-box .widget-content {
+	background: #E3E3E3;
+	background: #FFF;
+}
+
+
+
+
+.error-container {
+	margin-top: 4em;
+	margin-bottom: 4em;
+	text-align: center;
+}
+
+.error-container h1 {
+	margin-bottom: .5em;
+	font-size: 120px;
+	line-height: 1em;
+}
+
+.error-container h2 {
+	margin-bottom: .75em;
+	font-size: 28px;
+}
+
+.error-container .error-details {
+	margin-bottom: 1.5em;
+	font-size: 16px;
+}
+
+.error-container .error-actions a {
+	margin: 0 .5em;
+}
+
+/* Message layout */
+
+ul.messages_layout {
+	position: relative;
+	margin: 0;
+	padding: 0
+}
+
+ul.messages_layout li {
+	float: left;
+	list-style: none;
+	position: relative
+}
+
+ul.messages_layout li.left {
+	padding-left: 75px
+}
+
+ul.messages_layout li.right {
+	padding-right: 75px
+}
+
+ul.messages_layout li.right .avatar {
+	right: 0;
+	left: auto
+}
+
+ul.messages_layout li.right .message_wrap .arrow {
+	right: -12px;
+	left: auto;
+	background-position: 0 -213px;
+	height: 15px;
+	width: 12px
+}
+
+ul.messages_layout li.by_myself .message_wrap .info a.name {
+	color: #fff;
+}
+
+ul.messages_layout li a.avatar {
+	position: absolute;
+	left: 0;
+	top: 0
+}
+
+ul.messages_layout li a.avatar img {
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px
+}
+
+ul.messages_layout li .message_wrap {
+	position: relative;
+	padding: 10px;
+	margin-bottom: 20px;
+	float: left;
+	background-color: rgba(0, 0, 0, 0.40);
+	border: 1px solid rgba(255,255,255, 0.2);
+}
+
+ul.messages_layout li .message_wrap .arrow {
+	background-position: 0 -228px;
+	height: 15px;
+	width: 12px;
+	height: 15px;
+	width: 12px;
+	position: absolute;
+	left: -12px;
+	top: 13px
+}
+
+ul.messages_layout li .message_wrap .info {
+	float: left;
+	width: 100%;
+	border-bottom: 1px solid rgba(255,255,255, 0.3);
+	line-height: 23px
+}
+
+ul.messages_layout li .message_wrap .info .name {
+	float: left;
+	font-weight: bold;
+	color: #d8d8d8;
+}
+
+ul.messages_layout li .message_wrap .info .time {
+	float: left;
+	font-size: 11px;
+	margin-left: 6px
+}
+
+ul.messages_layout li .message_wrap .text {
+	float: left;
+	width: 100%;
+	padding-top: 5px
+}
+
+ul.messages_layout .dropdown-menu li {
+	width: 100%;
+	font-size: 11px;
+}
+
+/*------------------------------------------------------------------
+[8. Miscellaneous]
+*/
+
+
+
+.chart-holder {
+	width: 100%;
+	height: 250px;
+}
+
+.dropdown-menu li>a:hover, .dropdown-menu .active>a, .dropdown-menu .active>a:hover {
+	background-color: rgba(0, 0, 0, 0.65);
+}
+
+.accordion-heading {
+	background: #e5e5e5;
+}
+
+.accordion-heading a {
+	color: #545454;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.btn-facebook-alt i {
+	color: #23386a;
+}
+
+.btn-twitter-alt i {
+	color: #0098d0;
+}
+
+.btn-google-alt i {
+	color: #b6362d;
+}
+
+.btn-linkedin-alt i {
+	color: #0073b2;
+}
+
+.btn-pinterest-alt i {
+	color: #ab171e;
+}
+
+.btn-github-alt i {
+	color: #333;
+}
+
+.all-icons li {
+	list-style: none;
+}
+
