Today task complete
Change-Id: I436ef21d1cebd6c8828ffbf5a1c949e960b24ef7

--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -588,6 +588,24 @@ width: 945px;
 height: 200px;
 }
  
+ 
+ .gridLink{
+ color:blue;
+ background:none!important;
+ border:none;  
+ padding:0!important;
+ font: inherit;
+  cursor: pointer;
+  }
+  .fontColorBlue{
+  color: blue;
+  
+  }
+  .fontColorGray{
+  color: Gray;
+  
+  }
+  
  .ui-grid-header {
     
     height: 22% !important;
