--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -1095,15 +1095,18 @@ ul.messages_layout .dropdown-menu li {
     font-size: 11.05px;
     line-height: 2.3em;
 }
-table, th, td {
+/* table, th, td {
     border: 1px solid #FFFFFF;
     color:#FFFFFF;
     
-}
-td {
+}*/
+.columnText {
 	text-align:center;
-}
-  
+} 
+  .tblAndRowBorder{
+   border: 1px solid #FFFFFF;
+    color:#FFFFFF;
+    }
  label
  {
  color:#FFF;
